--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.28",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5",
-    "expo-splash-screen": "~0.27.5"
+    "react-native": "0.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
