--- a/Server/package.json
+++ b/Server/package.json
@@ -14,9 +14,11 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "express": "^4.21.0",
@@ -24,6 +26,7 @@
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
