--- a/Server/package.json
+++ b/Server/package.json
@@ -17,11 +17,14 @@
     "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "express": "^4.21.0",
+    "imagekit": "^5.2.0",
+    "imagekit-javascript": "^3.0.2",
     "joi": "^17.13.3",
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "^22.7.4",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
