--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "expo-image-picker": "~15.0.7",
-    "expo-camera": "~15.0.16"
+    "expo-camera": "~15.0.16",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
