--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^8.0.0",
+    "@config-plugins/react-native-pdf": "^8.0.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -22,10 +24,15 @@
     "expo-image-picker": "~15.0.7",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "fbjs": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-pdf": "^6.7.5"
+    "react-native-blob-util": "^0.19.11",
+    "react-native-pdf": "^6.7.5",
+    "expo-dev-client": "~4.0.28",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
