--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-camera": "~15.0.16",
+    "expo-dev-client": "~4.0.28",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
@@ -29,10 +30,10 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-blob-util": "^0.19.11",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-pdf": "^6.7.5",
-    "expo-dev-client": "~4.0.28",
-    "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.5"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
