--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "react": "18.2.0",
