--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@config-plugins/react-native-blob-util": "^8.0.0",
     "@config-plugins/react-native-pdf": "^8.0.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
