--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
