--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "react-native-geolocation-service": "5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
