--- a/app.json
+++ b/app.json
@@ -33,6 +33,11 @@
     "plugins": [
       "@config-plugins/react-native-blob-util",
       "@config-plugins/react-native-pdf"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "1d8be1fd-f9c6-408f-8277-c83010e41fc3"
+      }
+    }
   }
 }
